<resources>
    <string name="app_name">Final Project</string>
    <string name="bookmark_td">Bookmarking the favourite task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ne_title">Title</string>
    <string name="ne_add_info">Button for adding extra information</string>
    <string name="ne_todo_details">To do details</string>
    <string name="fab_desc">Add a new To Do</string>
    <string name="ne_buttonText">Location</string>
    <string name="ne_addButton">Done</string>
    <string name="ne_itemCount">%s items</string>
    <string name="ne_timeCreated">Today at %s1:%s2</string>
    <string name="title_todolist">All To-Do\'s</string>
    <string name="sharefr_title">Share</string>
    <string name="contactfr_title">Contact</string>
    <string name="aboutusfr_title">About us</string>
    <string name="navigation_header_desc">Navigation Header</string>
    <string name="addeditfr_datetime_enabler">Tap to enable date and time</string>
    <string name="settingsfr_title">Settings</string>
</resources>