<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewEntryFragment"
    android:padding="18dp">

<!--EditText for Title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ne_title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ne_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ne_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

<!--TextView for the timestamp of creation-->
    <TextView
        android:id="@+id/ne_timeCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="Today at 16:20"
        app:layout_constraintTop_toBottomOf="@id/ne_title_holder"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#a8a8a8"
        />

<!--Spinner for the category-->
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/ne_category"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@null"
       app:boxStrokeWidth="0dp"
       app:boxStrokeWidthFocused="0dp"
       app:endIconDrawable="@drawable/ic_arrow_down"
       app:layout_constraintStart_toEndOf="@id/ne_timeCreated"
       app:layout_constraintEnd_toStartOf="@+id/ne_addLocationButton"
       app:layout_constraintTop_toTopOf="@id/ne_timeCreated"
       app:layout_constraintBottom_toBottomOf="@id/ne_timeCreated">

       <AutoCompleteTextView
           android:id="@+id/ne_category_spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="none"
           android:textAlignment="center"
           android:textSize="14sp"
           tools:text="Category" />
   </com.google.android.material.textfield.TextInputLayout>

<!--Button for adding location-->
    <Button
        android:id="@+id/ne_addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="@id/ne_category"
        app:layout_constraintBottom_toBottomOf="@id/ne_category"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:text="@string/ne_buttonText"
        android:textSize="12sp"
        android:drawableEnd="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/ne_add_info" />

<!--EditText for the details-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ne_details_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        android:hint="@string/ne_todo_details"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ne_timeCreated">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ne_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ne_doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ne_addButton"
        android:drawableEnd="@drawable/ic_check"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>