<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddEditEntryFragment"
    android:padding="18dp"
    android:id="@+id/ne_AddEdit_ViewGroup">

    <androidx.fragment.app.FragmentContainerView android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

<!--EditText for Title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ne_title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ne_title"
        app:hintTextColor="#a8a8a8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autocomplete_fragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ne_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ne_date_time_checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ne_title_holder"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_item"
        android:paddingHorizontal="10dp"
        android:backgroundTint="@color/darker_gray"
        android:text="@string/addeditfr_datetime_enabler" />

    <!--TextView for task date -->
    <TextView
        android:id="@+id/ne_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Task Date"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/ne_date_time_checker"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

<!--TextView for task time-->
    <TextView
        android:id="@+id/ne_task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Task Time"
        android:textStyle="bold"
        android:textColor="?attr/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/ne_date_time_checker"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

<!--Spinner for the category-->
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/ne_category"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@null"
       app:boxStrokeWidth="0dp"
       app:boxStrokeWidthFocused="0dp"
       app:endIconDrawable="@drawable/ic_arrow_down"
       android:layout_marginTop="4dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="@id/ne_addLocationButton">

       <AutoCompleteTextView
           android:id="@+id/ne_category_spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="none"
           android:textAlignment="center"
           android:textSize="14sp"
           tools:text="Category" />
   </com.google.android.material.textfield.TextInputLayout>

<!--Button for adding location-->
    <Button
        android:id="@+id/ne_addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/ne_date_time_checker"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        android:text="@string/ne_buttonText"
        android:textSize="12sp"
        android:textColor="#a8a8a8"
        android:drawableEnd="@drawable/ic_edit"
        android:contentDescription="@string/ne_add_info" />

<!--EditText for the details-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ne_details_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:hint="@string/ne_todo_details"
        app:hintTextColor="#a8a8a8"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ne_addLocationButton">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ne_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ne_doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ne_addButton"
        android:drawableEnd="@drawable/ic_check"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:outlineSpotShadowColor="@android:color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>